# ChangeLog for dev-ruby/nokogiri
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/ChangeLog,v 1.40 2010/09/30 01:39:00 ranger Exp $

  30 Sep 2010; Brent Baude <ranger@gentoo.org> nokogiri-1.4.3.1.ebuild:
  Marking nokogiri-1.4.3.1 ~ppc64 for bug 330283

  28 Sep 2010; Brent Baude <ranger@gentoo.org> nokogiri-1.4.3.1.ebuild:
  Marking nokogiri-1.4.3.1 ~ppc for bug 330283

  19 Sep 2010; Raúl Porcel <armin76@gentoo.org> nokogiri-1.4.1.ebuild,
  nokogiri-1.4.1-r1.ebuild, nokogiri-1.4.3.1.ebuild,
  nokogiri-1.4.3.1-r1.ebuild:
  Add ~ia64

  18 Sep 2010; Raúl Porcel <armin76@gentoo.org> nokogiri-1.4.3.1.ebuild,
  nokogiri-1.4.3.1-r1.ebuild:
  Add ~sparc wrt #330283

*nokogiri-1.4.3.1-r1 (12 Sep 2010)

  12 Sep 2010; Hans de Graaff <graaff@gentoo.org>
  +nokogiri-1.4.3.1-r1.ebuild:
  Add ree18.

  12 Sep 2010; Hans de Graaff <graaff@gentoo.org> -nokogiri-1.4.0.ebuild,
  -nokogiri-1.4.2.ebuild:
  Remove old versions.

*nokogiri-1.4.3.1 (30 Jul 2010)

  30 Jul 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +nokogiri-1.4.3.1.ebuild:
  Version bump (upstream fixed 1.9.2 in a different way).

  30 Jul 2010; Jeremy Olexa <darkside@gentoo.org> nokogiri-1.4.2.ebuild:
  Add prefix keywords, bug 330283

  29 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  nokogiri-1.4.2.ebuild:
  keyworded ~arch for x86, bug 330283

  28 Jul 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  nokogiri-1.4.2.ebuild, +files/nokogiri-1.4.2+ruby-1.9.2.patch:
  Fix building with Ruby 1.9.2 (bug #330275).

*nokogiri-1.4.2 (19 Jun 2010)

  19 Jun 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +nokogiri-1.4.2.ebuild, metadata.xml:
  Version bump, add ffi USE flag to use the ffi interface rather than the
  compiled extension even on MRI.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  nokogiri-1.4.0.ebuild:
  Various cleanups.

  28 Feb 2010; Hans de Graaff <graaff@gentoo.org> -nokogiri-1.3.2.ebuild,