@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/Attic/nokogiri-1.4.3.1.ebuild,v 1.5 2010/09/30 01:39:00 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/Attic/nokogiri-1.4.3.1.ebuild,v 1.6 2010/10/25 01:51:23 jer Exp $
 
 EAPI=2
 
@@ -17,7 +17,7 @@ DESCRIPTION="Nokogiri is an HTML, XML, SAX, and Reader parser."
 HOMEPAGE="http://nokogiri.rubyforge.org/"
 LICENSE="MIT"
 
-KEYWORDS="~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-solaris"
+KEYWORDS="~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-solaris"
 SLOT="0"
 IUSE="ffi"
 
